# SelectFileCLI

./: .actrc  .coveragerc  .dockerignore  .env.development  .gitignore  .gitleaks.toml  .gitleaksignore  .pre-commit-config.yaml  .sequential-aliases  .trufflehog  .trufflehog-exclude  .yamlfmt  .yamllint  .yamllint.yml  AUTHORS.md  BUILD_SUMMARY.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  COMMIT_MESSAGE.txt  CONTRIBUTING.md  CURRENT_ISSUES.md  DEADLOCK_PREVENTION_GUIDE.md  Dockerfile  FINAL_UPDATE_SUMMARY.md  FIXES_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  LICENSE  LOADING_INDICATOR_ANALYSIS.md  MANIFEST.in  Makefile  PRECOMMIT_DEADLOCK_FIX.md  PROJECT_STATUS.md  PUBLISHING.md  README.md  RELEASE_PROCESS.md  SCRIPT_CONSOLIDATION_SUMMARY.md  SEP_CI_STRATEGY.md  SEQUENTIAL_EXECUTION_PHILOSOPHY.md  SEQUENTIAL_EXECUTION_SOLUTION.md  (+36 more)
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yml  bump_version.yml  check.yml  format.yml  install.yml  lint.yml  pre-commit-sequential.yml  prfix.yml  publish.yml  release.yml  scan.yml  security.yml  sequential-ci.yml  sync.yml  test-workflows.yml  test.yml
.pre-commit-wrappers/: memory-limited-hook.sh  trufflehog-limited.sh
.sequential-locks/seq-exec-22a1589f/: current_run  pipeline_timeout.txt  queue.txt  run_log  run_start
DEV_DOCS/: .sequential-precommit-env  SEQUENTIAL_PIPELINE_STATUS.md
DOCS_DEV/: ARCHITECTURE_SIMPLIFICATION_SUMMARY.md  ATOMIC_COMMAND_UPDATE_SUMMARY.md  DEADLOCK_PREVENTION_GUIDE.md  FINAL_UPDATE_SUMMARY.md  PRECOMMIT_DEADLOCK_FIX.md  PROJECT_STATUS.md  SCRIPT_LINTING_SUMMARY.md  SEQUENTIAL_EXECUTION_PHILOSOPHY.md  SEQUENTIAL_EXECUTION_PIPELINE_SETUP_v8.6.0.md  SEQUENTIAL_MIGRATION_SUMMARY.md  SEQUENTIAL_PIPELINE_COMPLETE.md  SEQUENTIAL_PIPELINE_STATUS.md  SEQUENTIAL_PIPELINE_UPDATE_SUMMARY.md  SEQUENTIAL_PRECOMMIT_SETUP_v3.md  SEQUENTIAL_SETUP_COMPLETENESS_CHECK.md  SEQUENTIAL_V3_STREAMLINE_SUMMARY.md  SESSION_SUMMARY.md  TEST_REPORT.md  V3_PROTOCOL_MIGRATION_SUMMARY.md  WAIT_ALL_V3.2_TEST_SUMMARY.md  requirements_verification_report.md
docs/: ATOMIFICATION_FEATURE.md  SEQUENTIAL_QUEUE_DESIGN.md
examples/: advanced_example.py  example.py  test_intelligent_snapshot_demo.sh  test_pytest_atomization_demo.sh
scripts/: CONSOLIDATION_PLAN.md  PYTEST_ATOMIZATION_IMPROVEMENTS.md  README.md  ROBUST_SNAPSHOT_DETECTION.md  aggregate_test_results.sh  atomic-hook.sh  check_workflow_execution.sh  detect_snapshot_tests.py  ensure-sequential.sh  example-atomic-pipeline.sh  fix_all_workflows.sh  git-safe.sh  install-deps.sh  install_sequential.sh  kill-orphans.sh  make-sequential.sh  memory_monitor.sh  monitor-queue.sh  monitor_memory_during_tests.sh  pre-commit-safe.sh  print_version.sh  pytest_atomization_summary.txt  safe-run.sh  sep.sh  sep_common.sh  sep_detect_snapshot_tests.py  sep_installer.sh  sep_kill_orphans.sh  sep_memory_monitor.sh  sep_monitor_queue.sh  sep_queue.sh  sep_tool_atomifier.sh  sep_tool_config.sh  sep_wait_all.sh  seq  sequential-executor-strict.sh  sequential-executor-v1.sh  sequential-executor-v2.sh  sequential-executor.sh  sequential_exec.sh  (+13 more)
scripts/legacy/: parse_pytest_results.sh  run_test_with_retry_on_snapshot_fail.sh  run_test_with_snapshot_detection.sh
src/selectfilecli/: FileList.py  __init__.py  fileBrowser.py  file_browser_app.py  (+1 more)
tests/: LOADING_INDICATOR_TESTS_SUMMARY.md  README_EDGE_CASE_TESTS.md  conftest.py  conftest_snapshots.py  test_all_requirements_summary.py  test_api_fileinfo.py  test_basic.py  test_control_char_snapshots.py  test_edge_case_snapshots.py  test_empty_directory_snapshots.py  test_file_browser_app.py  test_file_browser_app_unit.py  test_loading_indicator_snapshots.py  test_loading_manual_check.py  test_loading_snapshots_with_delay.py  test_navigation_loading.py  test_pipeline.py  test_regression_fixes.py  test_requirements_verification.py  test_scrollbar_snapshots.py  test_snapshot_app_edge_cases.py  test_terminal_resize_snapshots.py  test_utils.py  test_visual_requirements.py
(+9 files in other folders)
