[project]
name = "selectfilecli"
version = "0.4.1"
description = "A handy file selection browser for CLI applications using Textual TUI"
readme = "README.md"
authors = [
    { name = "Emasoft", email = "713559+Emasoft@users.noreply.github.com" }
]
requires-python = ">=3.10"
license = { text = "MIT" }
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Terminals",
]
keywords = ["cli", "tui", "file-browser", "terminal", "textual"]
dependencies = [
    "textual>=0.47.0",
]

[project.urls]
Homepage = "https://github.com/Emasoft/selectfilecli"
Repository = "https://github.com/Emasoft/selectfilecli"
Issues = "https://github.com/Emasoft/selectfilecli/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "pytest-textual-snapshot>=0.4.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "types-setuptools",
    "pre-commit>=3.0.0",
    "pre-commit-hooks>=4.0.0",
]

test = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "pytest-textual-snapshot>=0.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/selectfilecli"]

[dependency-groups]
dev = [
    "deptry>=0.23.0",
    "yamllint>=1.37.1",
]

[tool.hatch.build]
include = [
    "src/selectfilecli/**/*.py",
    "src/selectfilecli/py.typed",
]
exclude = [
    "**/__pycache__",
    "**/*.pyc",
    "**/*.pyo",
    "**/*~",
    "**/.DS_Store",
]

[tool.deptry]
ignore = ["DEP002", "DEP003"]  # Ignore unused dependencies and transitive dependencies
known_first_party = ["selectfilecli"]
