[metadata]
name = selectfilecli
author = Emasoft
author_email = 713559+Emasoft@users.noreply.github.com
description = A handy file selection browser for CLI applications using Textual TUI
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: POSIX
    Operating System :: MacOS
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Terminals

[options]
python_requires = >=3.10
install_requires =
    textual>=0.47.0

[options.extras_require]
dev =
    pytest>=7.4.0
    pytest-cov>=4.1.0
    pytest-asyncio>=0.21.0
    pytest-textual-snapshot>=0.4.0
    ruff>=0.1.0
    mypy>=1.0.0
    types-setuptools
    pre-commit>=3.0.0
    pre-commit-hooks>=4.0.0

test =
    pytest>=7.4.0
    pytest-cov>=4.1.0
    pytest-asyncio>=0.21.0
    pytest-textual-snapshot>=0.4.0

[bdist_wheel]
universal = 0

[mypy]
python_version = 3.10
warn_return_any = True
warn_unused_configs = True

[tool:pytest]
testpaths = tests
python_files = test_*.py
python_classes = Test*
python_functions = test_*
